docs(kb): add memory accounting